--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,4 +21,11 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  min-width: 320px;
+}
+
+@layer base {
+  input, textarea, button, select {
+    @apply focus:outline-none;
+  }
 }
